# YongJun_ws

./: .gitignore  README.md
YongJun/install/: local_setup.sh  setup.sh
YongJun/log/: latest_build
codegen/exe/deployedPointPillarModel/: MWCudnnCNNLayerImpl.hpp  MWCudnnConcatenationLayerImpl.cu  MWCudnnConcatenationLayerImpl.hpp  arrayfun.cu  (+77 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
matlab/: README.md
matlab/AutoL_LiDAR/: LR_Detection.m  buildMEX.m  buildROS.m  deployedPointPillarModel.m  pointpillarsDetect.m
matlab/AutoL_LiDAR/src/deployedpointpillarmodel/: CMakeLists.txt  packageInfo.mat
matlab/AutoL_LiDAR/src/deployedpointpillarmodel/include/deployedpointpillarmodel/: MWConvLayer.hpp  MWCudnnBatchNormalizationLayerImpl.hpp  MWCudnnInputLayerImpl.hpp  MWCudnnMaxPoolingLayerImpl.hpp  MWCudnnOutputLayerImpl.hpp  MWRNNParameterTypes.hpp  MWTensor.hpp  Resize2DLayer.h  cellstr_sort.h  createPillars.hpp  minOrMax.h  mlros2_node.h  mlros2_time.h  rosReadXYZ.h  rtGetInf.h  rtGetNaN.h  std_msgs_HeaderStruct.h  vision_msgs_Detection3DArrayStruct.h  vision_msgs_ObjectHypothesisWithPoseStruct.h
matlab/AutoL_LiDAR/src/deployedpointpillarmodel/src/: MWCNNLayer.cpp  MWCudnnCNNLayerImpl.cu  cosd.cu  createAnchorMaskPointPillars.cu  createPillarsImpl.cpp  geometry_msgs_Vector3Struct.cu  introsort.cu  ros2publisher.cu  ros2rate.cu  rosReadXYZ.cu  rt_nonfinite.cu  std_msgs_HeaderStruct.cu  vision_msgs_ObjectHypothesisStruct.cu
matlab/AutoL_LiDAR_CAM/: AutoL_Viewer.m  AutoL_parsing.m  AutoL_parsing_Intensity.m  RGB_D_image.m  cameraParams_Final.mat
matlab/AutoL_LiDAR_CAM_Codegen/: AutoL_parsing_view.asv  AutoL_parsing_view.m  packet_extract.m  ptCloud_extract.m
matlab/AutoL_LiDAR_CAM_ROS/: Detection.asv  Image2ptCloud.m  LR_Detection.m  LR_test.m  Lidar_Viewer.m  RGB_D_lidar.asv  RGB_D_lidar.m  RGB_D_oldest.m  Yolo_Viewer.m  computeDistance.m  computeDistance_image.asv  computeDistance_image.m  deployedPointPillarModel.m  drawCuboid.m  helperComputeDistance.m  packet_extract.m  ptCloud2Image.m  ptCloud_extract.m  untitled2.m
matlab/AutoL_LiDAR_ROS/: AutoL_parsing.m  AutoL_parsing_Intensity.m  Calibration.mat  Detection.m  Image2ptCloud.m  LR_Detection.asv  LR_Detection.m  LR_Detection_ROS.m  LR_computeDistance.m  LR_test.m  Lidar_Viewer.m  Lidar_codegen.m  Lidar_codegen.prj  RGB_D.asv  RGB_D.m  RGB_D_image.asv  RGB_D_image.m  RGB_D_lidar.m  RGB_D_oldest.m  Yolo_Viewer.m  buildOption.m  computeDistance.m  computeDistance_image.m  crc16_calculator.m  crc32_calculator.m  crc_tableloader.m  deleteCuboid.m  drawCuboid.m  extractBboxes.m  generator.mlx  getCuboidInfo.m  getTrackBoxes.m  get_ptdata.m  helperComputeDistance.m  initBboxFilter.m  insertTrackBoxes.m  lidarNode.m  packet_extract.m  payload.mat  pointpillardetect.m  (+20 more)
matlab/AutoL_LiDAR_codegen/: AutoL_parsing.m  AutoL_parsing.prj  AutoL_parsing_Intensity.prj  AutoL_parsing_reset.m  AutoL_parsing_reset.prj  AutoL_parsing_view.m  packet_extract.m  ptCloud_extract.m  ptCloud_extract_vector.m
matlab/Livox_LiDAR/: Avia_parsing.m  Avia_parsing.prj  Avia_parsing_single.m  Avia_parsing_single.prj  Avia_parsing_triple.m  Avia_viewer.m  Avia_viewer_complexYolo.m  Avia_viewer_detect.m  Avia_viewer_detect_ros.m  Avia_viewer_mex.asv  Avia_viewer_mex.m  Avia_viewer_pointPillars.m  Avia_viewer_ros.m  Avia_viewer_single.m  Avia_viewer_triple.m  InitProtocol.m  LR_computeDistance.m  Libox_parsing.m  binParsing.m  bytesToDec.m  packet.mat  ptCldToBEV.m  ptCloud_non_sort.mat  ptCloud_sort.mat  transferBboxToCuboidBbox.m  untitled.m
matlab_ws/: README.md
matlab_ws/AutoL_LiDAR/: C920_Viewer.m  G32_ptCloud_extract.m  computeDistance.asv  pointSort.m  ptCloud2Image.asv
matlab_ws/Livox_LiDAR/: Avia_parsing.m  Avia_parsing.prj  Avia_viewer.m  Avia_viewer_ros.m  Avia_viewer_save_bin_file.m  InitProtocol.m  binParsing.asv  binParsing.m  lidarcamCalib.asv
matlab_ws/msgdef/: geometry_msgs_PoseWithCovarianceStruct.m
ros2_ws/: =23.2.0
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/vision_msgs/: CMakeLists.txt  packageInfo.mat
src/deployedpointpillarmodel/: CMakeLists.txt  package.xml  packageInfo.mat
src/deployedpointpillarmodel/include/deployedpointpillarmodel/: MWActivationFunctionType.hpp  MWConcatenationLayer.hpp  MWCudnnFusedConvActivationLayerImpl.hpp  MWCudnnSplittingLayerImpl.hpp  MWFusedConvActivationLayer.hpp  MWMaxPoolingLayer.hpp  MWScanFunctors.h  SpecialMsgUtil.h  arrayfun.h  bbox2poly.h  cellstr_sort.h  cellstr_unique.h  cosd.h  deployedPointPillarModel_data.h  deployedPointPillarModel_terminate.h  deployedPointPillarModel_types.h  find.h  geometry_msgs_PointStruct.h  geometry_msgs_PoseStruct.h  geometry_msgs_PoseWithCovarianceStruct.h  geometry_msgs_QuaternionStruct.h  geometry_msgs_Vector3Struct.h  getCategoryNames.h  heapsort.h  inpolygon.h  insertionsort.h  introsort.h  lidar_defines.h  minOrMax.h  mlros2_msgconvert_utils.h  mtimes.h  overlapPolygonRotatedRects.h  permute.h  predict.h  ros2subscriber.h  rosReadXYZ.h  rtGetNaN.h  sensor_msgs_PointCloud2Struct.h  sensor_msgs_PointFieldStruct.h  sind.h  (+5 more)
src/deployedpointpillarmodel/src/: MWCudnnCustomLayerBase.cu  MWCudnnLayerImplFactory.cu  MWOutputLayer.cpp  PointCloud2Types.cu  PointCloudImpl.cu  Resize2DLayer.cu  bbox2poly.cu  cat.cu  cellstr_sort.cu  cellstr_strtrim.cu  cosd.cu  createAnchorsPointPillars.cu  deployedPointPillarModel.cu  deployedPointPillarModel_data.cu  deployedPointPillarModel_initialize.cu  deployedPointPillarModel_rtwutil.cu  deployedPointPillarModel_terminate.cu  dlnetwork.cu  find.cu  geometry_msgs_PointStruct.cu  geometry_msgs_QuaternionStruct.cu  geometry_msgs_Vector3Struct.cu  getCategoryNames.cu  getSubsetPoints.cu  heapsort.cu  insertionsort.cu  ipermute.cu  overlapPolygonRotatedRects.cu  pause.cu  ros2publisher.cu  rosReadField.cu  rtGetNaN.cu  sensor_msgs_PointCloud2Struct.cu  sind.cu  vision_msgs_BoundingBox3DStruct.cu  vision_msgs_Detection3DArrayStruct.cu  vision_msgs_Detection3DStruct.cu  vision_msgs_ObjectHypothesisWithPoseStruct.cu
(+4460 files in other folders)
